--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Hintorium | Reusable Tooltips" />
-    <meta name="twitter:description" content="Lightweight, reusable tooltip
+    <meta
+      name="twitter:description"
+      content="Lightweight, reusable tooltip
     component library built with TypeScript and Vite, featuring smooth
-    animations and flexible positioning.
+    animations and flexible positioning."
+    />
     <meta name="twitter:image" content="/og-image.png" />
 
     <title>Hintorium | Reusable Tooltips</title>
@@ -35,7 +38,9 @@
     <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <button data-hintorium-tooltip="Hallo!">Hallo!</button>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
