feat(positioning): add positioning, options
Add general positoning of tooltip element.
Setup options to gave user more control over the tooltips.
Validate to ensure correct options are used.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
   <body>
     <div id="app">
       <button data-hintorium-tooltip="Hallo!">Hallo!</button>
+      <button
+        data-hintorium-tooltip="Hallo!"
+        data-hintorium-tooltip-position="right"
+      >
+        Hallo!
+      </button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
