feat(theme): add custom themes to tooltips

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <button
         data-hintorium-tooltip="Hallo!"
         data-hintorium-tooltip-position="right"
+        data-hintorium-tooltip-theme="baba"
       >
         Hallo!
       </button>
