feat(styling): add more themes motifes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <button
         data-hintorium-tooltip="Hallo!"
         data-hintorium-tooltip-position="right"
-        data-hintorium-tooltip-theme="baba"
+        data-hintorium-tooltip-theme="glass"
       >
         Hallo!
       </button>
