feat: accessibility, keyboard detection, send custom events

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
       >
         Hallo!
       </button>
+
+      <div
+        data-hintorium-tooltip="Hallo!"
+        data-hintorium-tooltip-position="bottom"
+        data-hintorium-tooltip-theme="glass"
+        data-hintorium-tooltip-animation="bounce"
+      >
+        Div hallo!
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
