feat(manager,validator): refactor manager,validator,jsdoc

--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
   <body>
     <div id="app">
       <button
-        data-hintorium-tooltip="Hallo!"
+        data-hintorium-tooltip="asd"
         data-hintorium-tooltip-animation="slide"
       >
         Hallo!
       </button>
       <button
         data-hintorium-tooltip="Hallo!"
-        data-hintorium-tooltip-position="right"
-        data-hintorium-tooltip-theme="glass"
-        data-hintorium-tooltip-animation="bounce"
+        data-hintorium-tooltip-theme="dark"
+        data-hintorium-tooltip-animation="fade"
       >
         Hallo!
       </button>
