feat(smart,responsivity): work with smart positioning

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
   <body>
     <div id="app">
       <button
-        data-hintorium-tooltip="asd"
+        data-hintorium-tooltip="Ho na solo"
         data-hintorium-tooltip-animation="slide"
+        data-hintorium-tooltip-position="right"
       >
         Hallo!
       </button>
-      <button
+      <!-- <button
         data-hintorium-tooltip="Hallo!"
         data-hintorium-tooltip-theme="dark"
         data-hintorium-tooltip-animation="fade"
@@ -60,8 +61,9 @@
         data-hintorium-tooltip-animation="bounce"
       >
         Div hallo!
-      </div>
+      </div> -->
     </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
